--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: go
 go: 1.5
-script: go test -cover .
+before_install:
+  - go get github.com/frankbraun/gocheck
+script:
+  - gocheck -g -c -e _example -e sqlite3_test
